--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,14 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: dark light;
+  color: rgba(34, 34, 34, 0.87);
+  background-color: #acafaa;
+  background: linear-gradient(45deg,
+      rgb(176, 238, 174) 0%,
+      rgba(148, 187, 233, 1) 100%);
+
+  height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,6 +30,16 @@ a {
 
 a:hover {
   color: #535bf2;
+}
+
+input {
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: 500;
+  padding: 0.6em 1.2em;
+  border-radius: 8px;
+  border: 1px solid #c4baac;
+  background-color: #f9f9f9;
 }
 
 /* body {
@@ -85,9 +100,15 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
+  width: 100%;
+}
+
+.button-secondary {
+  background-color: #f9f9f95a;
+  color: #4d4d4d;
 }
 
 button:hover {
