--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,7 @@ input {
   padding: 32px;
   width: 100%;
   align-items: flex-start;
+  margin-bottom: 32px;
 }
 
 #promptArea>div {
@@ -111,7 +112,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
   width: 100%;
@@ -147,4 +147,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  background-color: #acafaa85;
+  color: #d4ffa0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
