add button that shows up to switch network when needed

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -39,4 +42,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.blocking-alert {
+  background-color: #0001;
+  color: #111b;
+  padding: 1em;
+  border-radius: 0.5em;
+  margin: 1em 0;
+  box-shadow: 0 0 8px #00000017;
 }
