--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
       rgb(176, 238, 174) 0%,
       rgba(148, 187, 233, 1) 100%);
 
-  height: 100vh;
+  min-height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
